// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LearnerActivityTable renders active learners table correctly 1`] = `
<div
  className="active-week"
>
  <div
    className="row"
  >
    <div
      className="col"
    >
      <div
        className="table-responsive"
      >
        <table
          className="table table-sm table-striped"
        >
          <thead
            className=""
          >
            <tr
              className=""
            >
              <th
                className="sortable"
                scope="col"
              >
                <button
                  className="btn btn-header"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  type="button"
                >
                  <span>
                    Email
                    <span
                      className="sr-only"
                    >
                       
                      sort ascending
                    </span>
                     
                    <span
                      aria-hidden={true}
                      className="fa fa-sort-asc"
                    />
                  </span>
                </button>
              </th>
              <th
                className="sortable"
                scope="col"
              >
                <button
                  className="btn btn-header"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  type="button"
                >
                  <span>
                    Course Title
                    <span
                      className="sr-only"
                    >
                       
                      click to sort
                    </span>
                     
                    <span
                      aria-hidden={true}
                      className="fa fa-sort"
                    />
                  </span>
                </button>
              </th>
              <th
                className="sortable"
                scope="col"
              >
                <button
                  className="btn btn-header"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  type="button"
                >
                  <span>
                    Course Price
                    <span
                      className="sr-only"
                    >
                       
                      click to sort
                    </span>
                     
                    <span
                      aria-hidden={true}
                      className="fa fa-sort"
                    />
                  </span>
                </button>
              </th>
              <th
                className="sortable"
                scope="col"
              >
                <button
                  className="btn btn-header"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  type="button"
                >
                  <span>
                    Start Date
                    <span
                      className="sr-only"
                    >
                       
                      click to sort
                    </span>
                     
                    <span
                      aria-hidden={true}
                      className="fa fa-sort"
                    />
                  </span>
                </button>
              </th>
              <th
                className="sortable"
                scope="col"
              >
                <button
                  className="btn btn-header"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  type="button"
                >
                  <span>
                    End Date
                    <span
                      className="sr-only"
                    >
                       
                      click to sort
                    </span>
                     
                    <span
                      aria-hidden={true}
                      className="fa fa-sort"
                    />
                  </span>
                </button>
              </th>
              <th
                className="sortable"
                scope="col"
              >
                <button
                  className="btn btn-header"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  type="button"
                >
                  <span>
                    Passed Date
                    <span
                      className="sr-only"
                    >
                       
                      click to sort
                    </span>
                     
                    <span
                      aria-hidden={true}
                      className="fa fa-sort"
                    />
                  </span>
                </button>
              </th>
              <th
                className="sortable"
                scope="col"
              >
                <button
                  className="btn btn-header"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  type="button"
                >
                  <span>
                    Current Grade
                    <span
                      className="sr-only"
                    >
                       
                      click to sort
                    </span>
                     
                    <span
                      aria-hidden={true}
                      className="fa fa-sort"
                    />
                  </span>
                </button>
              </th>
              <th
                className="sortable"
                scope="col"
              >
                <button
                  className="btn btn-header"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  type="button"
                >
                  <span>
                    Last Activity Date
                    <span
                      className="sr-only"
                    >
                       
                      click to sort
                    </span>
                     
                    <span
                      aria-hidden={true}
                      className="fa fa-sort"
                    />
                  </span>
                </button>
              </th>
            </tr>
          </thead>
          <tbody
            className=""
          >
            <tr
              className=""
            >
              <td
                className=""
                scope={null}
              >
                awesome.me@example.com
              </td>
              <td
                className=""
                scope={null}
              >
                Dive into ReactJS
              </td>
              <td
                className=""
                scope={null}
              >
                $200
              </td>
              <td
                className=""
                scope={null}
              >
                October 22, 2017
              </td>
              <td
                className=""
                scope={null}
              >
                May 13, 2018
              </td>
              <td
                className=""
                scope={null}
              >
                September 23, 2018
              </td>
              <td
                className=""
                scope={null}
              >
                66%
              </td>
              <td
                className=""
                scope={null}
              >
                September 22, 2018
              </td>
            </tr>
            <tr
              className=""
            >
              <td
                className=""
                scope={null}
              >
                new@example.com
              </td>
              <td
                className=""
                scope={null}
              >
                Redux with ReactJS
              </td>
              <td
                className=""
                scope={null}
              >
                $200
              </td>
              <td
                className=""
                scope={null}
              >
                October 22, 2017
              </td>
              <td
                className=""
                scope={null}
              >
                May 13, 2018
              </td>
              <td
                className=""
                scope={null}
              >
                September 22, 2018
              </td>
              <td
                className=""
                scope={null}
              >
                80%
              </td>
              <td
                className=""
                scope={null}
              >
                September 25, 2018
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <div
    className="row mt-2"
  >
    <div
      className="col d-flex justify-content-center"
    >
      <nav
        aria-label="active-week-pagination"
      >
        <div
          aria-atomic={true}
          aria-live="polite"
          aria-relevant="text"
          className="sr-only"
        >
          Page 1, Current Page, of 1
        </div>
        <ul
          className="pagination"
        >
          <li
            className="page-item disabled"
          >
            <button
              aria-label="Previous"
              className="btn previous page-link"
              disabled={true}
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              tabIndex="-1"
              type="button"
            >
              <div>
                <span
                  aria-hidden={true}
                  className="fa fa-chevron-left mr-2"
                  id="pagination-3"
                />
                Previous
              </div>
            </button>
          </li>
          <li
            className="page-item disabled"
          >
            <button
              aria-label="Next"
              className="btn next page-link"
              disabled={true}
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              tabIndex="-1"
              type="button"
            >
              <div>
                Next
                <span
                  aria-hidden={true}
                  className="fa fa-chevron-right ml-2"
                  id="pagination-4"
                />
              </div>
            </button>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</div>
`;

exports[`LearnerActivityTable renders empty state correctly 1`] = `
<div
  className="alert fade alert-warning show"
  hidden={false}
  role="alert"
>
  <div
    className="alert-dialog"
  >
    <div
      className="d-flex"
    >
      <div
        className="icon mr-2"
      >
        <span
          aria-hidden={true}
          className="fa fa-exclamation-circle"
          id="Icon2"
        />
      </div>
      <div
        className="message"
      >
        There are no results.
      </div>
    </div>
  </div>
</div>
`;

exports[`LearnerActivityTable renders inactive past month learners table correctly 1`] = `
<div
  className="inactive-month"
>
  <div
    className="row"
  >
    <div
      className="col"
    >
      <div
        className="table-responsive"
      >
        <table
          className="table table-sm table-striped"
        >
          <thead
            className=""
          >
            <tr
              className=""
            >
              <th
                className="sortable"
                scope="col"
              >
                <button
                  className="btn btn-header"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  type="button"
                >
                  <span>
                    Email
                    <span
                      className="sr-only"
                    >
                       
                      sort ascending
                    </span>
                     
                    <span
                      aria-hidden={true}
                      className="fa fa-sort-asc"
                    />
                  </span>
                </button>
              </th>
              <th
                className="sortable"
                scope="col"
              >
                <button
                  className="btn btn-header"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  type="button"
                >
                  <span>
                    Course Title
                    <span
                      className="sr-only"
                    >
                       
                      click to sort
                    </span>
                     
                    <span
                      aria-hidden={true}
                      className="fa fa-sort"
                    />
                  </span>
                </button>
              </th>
              <th
                className="sortable"
                scope="col"
              >
                <button
                  className="btn btn-header"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  type="button"
                >
                  <span>
                    Course Price
                    <span
                      className="sr-only"
                    >
                       
                      click to sort
                    </span>
                     
                    <span
                      aria-hidden={true}
                      className="fa fa-sort"
                    />
                  </span>
                </button>
              </th>
              <th
                className="sortable"
                scope="col"
              >
                <button
                  className="btn btn-header"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  type="button"
                >
                  <span>
                    Start Date
                    <span
                      className="sr-only"
                    >
                       
                      click to sort
                    </span>
                     
                    <span
                      aria-hidden={true}
                      className="fa fa-sort"
                    />
                  </span>
                </button>
              </th>
              <th
                className="sortable"
                scope="col"
              >
                <button
                  className="btn btn-header"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  type="button"
                >
                  <span>
                    End Date
                    <span
                      className="sr-only"
                    >
                       
                      click to sort
                    </span>
                     
                    <span
                      aria-hidden={true}
                      className="fa fa-sort"
                    />
                  </span>
                </button>
              </th>
              <th
                className="sortable"
                scope="col"
              >
                <button
                  className="btn btn-header"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  type="button"
                >
                  <span>
                    Current Grade
                    <span
                      className="sr-only"
                    >
                       
                      click to sort
                    </span>
                     
                    <span
                      aria-hidden={true}
                      className="fa fa-sort"
                    />
                  </span>
                </button>
              </th>
              <th
                className="sortable"
                scope="col"
              >
                <button
                  className="btn btn-header"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  type="button"
                >
                  <span>
                    Last Activity Date
                    <span
                      className="sr-only"
                    >
                       
                      click to sort
                    </span>
                     
                    <span
                      aria-hidden={true}
                      className="fa fa-sort"
                    />
                  </span>
                </button>
              </th>
            </tr>
          </thead>
          <tbody
            className=""
          >
            <tr
              className=""
            >
              <td
                className=""
                scope={null}
              >
                awesome.me@example.com
              </td>
              <td
                className=""
                scope={null}
              >
                Dive into ReactJS
              </td>
              <td
                className=""
                scope={null}
              >
                $200
              </td>
              <td
                className=""
                scope={null}
              >
                October 22, 2017
              </td>
              <td
                className=""
                scope={null}
              >
                May 13, 2018
              </td>
              <td
                className=""
                scope={null}
              >
                66%
              </td>
              <td
                className=""
                scope={null}
              >
                September 22, 2018
              </td>
            </tr>
            <tr
              className=""
            >
              <td
                className=""
                scope={null}
              >
                new@example.com
              </td>
              <td
                className=""
                scope={null}
              >
                Redux with ReactJS
              </td>
              <td
                className=""
                scope={null}
              >
                $200
              </td>
              <td
                className=""
                scope={null}
              >
                October 22, 2017
              </td>
              <td
                className=""
                scope={null}
              >
                May 13, 2018
              </td>
              <td
                className=""
                scope={null}
              >
                80%
              </td>
              <td
                className=""
                scope={null}
              >
                September 25, 2018
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <div
    className="row mt-2"
  >
    <div
      className="col d-flex justify-content-center"
    >
      <nav
        aria-label="inactive-month-pagination"
      >
        <div
          aria-atomic={true}
          aria-live="polite"
          aria-relevant="text"
          className="sr-only"
        >
          Page 1, Current Page, of 1
        </div>
        <ul
          className="pagination"
        >
          <li
            className="page-item disabled"
          >
            <button
              aria-label="Previous"
              className="btn previous page-link"
              disabled={true}
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              tabIndex="-1"
              type="button"
            >
              <div>
                <span
                  aria-hidden={true}
                  className="fa fa-chevron-left mr-2"
                  id="pagination-7"
                />
                Previous
              </div>
            </button>
          </li>
          <li
            className="page-item disabled"
          >
            <button
              aria-label="Next"
              className="btn next page-link"
              disabled={true}
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              tabIndex="-1"
              type="button"
            >
              <div>
                Next
                <span
                  aria-hidden={true}
                  className="fa fa-chevron-right ml-2"
                  id="pagination-8"
                />
              </div>
            </button>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</div>
`;

exports[`LearnerActivityTable renders inactive past week learners table correctly 1`] = `
<div
  className="inactive-week"
>
  <div
    className="row"
  >
    <div
      className="col"
    >
      <div
        className="table-responsive"
      >
        <table
          className="table table-sm table-striped"
        >
          <thead
            className=""
          >
            <tr
              className=""
            >
              <th
                className="sortable"
                scope="col"
              >
                <button
                  className="btn btn-header"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  type="button"
                >
                  <span>
                    Email
                    <span
                      className="sr-only"
                    >
                       
                      sort ascending
                    </span>
                     
                    <span
                      aria-hidden={true}
                      className="fa fa-sort-asc"
                    />
                  </span>
                </button>
              </th>
              <th
                className="sortable"
                scope="col"
              >
                <button
                  className="btn btn-header"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  type="button"
                >
                  <span>
                    Course Title
                    <span
                      className="sr-only"
                    >
                       
                      click to sort
                    </span>
                     
                    <span
                      aria-hidden={true}
                      className="fa fa-sort"
                    />
                  </span>
                </button>
              </th>
              <th
                className="sortable"
                scope="col"
              >
                <button
                  className="btn btn-header"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  type="button"
                >
                  <span>
                    Course Price
                    <span
                      className="sr-only"
                    >
                       
                      click to sort
                    </span>
                     
                    <span
                      aria-hidden={true}
                      className="fa fa-sort"
                    />
                  </span>
                </button>
              </th>
              <th
                className="sortable"
                scope="col"
              >
                <button
                  className="btn btn-header"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  type="button"
                >
                  <span>
                    Start Date
                    <span
                      className="sr-only"
                    >
                       
                      click to sort
                    </span>
                     
                    <span
                      aria-hidden={true}
                      className="fa fa-sort"
                    />
                  </span>
                </button>
              </th>
              <th
                className="sortable"
                scope="col"
              >
                <button
                  className="btn btn-header"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  type="button"
                >
                  <span>
                    End Date
                    <span
                      className="sr-only"
                    >
                       
                      click to sort
                    </span>
                     
                    <span
                      aria-hidden={true}
                      className="fa fa-sort"
                    />
                  </span>
                </button>
              </th>
              <th
                className="sortable"
                scope="col"
              >
                <button
                  className="btn btn-header"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  type="button"
                >
                  <span>
                    Current Grade
                    <span
                      className="sr-only"
                    >
                       
                      click to sort
                    </span>
                     
                    <span
                      aria-hidden={true}
                      className="fa fa-sort"
                    />
                  </span>
                </button>
              </th>
              <th
                className="sortable"
                scope="col"
              >
                <button
                  className="btn btn-header"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  type="button"
                >
                  <span>
                    Last Activity Date
                    <span
                      className="sr-only"
                    >
                       
                      click to sort
                    </span>
                     
                    <span
                      aria-hidden={true}
                      className="fa fa-sort"
                    />
                  </span>
                </button>
              </th>
            </tr>
          </thead>
          <tbody
            className=""
          >
            <tr
              className=""
            >
              <td
                className=""
                scope={null}
              >
                awesome.me@example.com
              </td>
              <td
                className=""
                scope={null}
              >
                Dive into ReactJS
              </td>
              <td
                className=""
                scope={null}
              >
                $200
              </td>
              <td
                className=""
                scope={null}
              >
                October 22, 2017
              </td>
              <td
                className=""
                scope={null}
              >
                May 13, 2018
              </td>
              <td
                className=""
                scope={null}
              >
                66%
              </td>
              <td
                className=""
                scope={null}
              >
                September 22, 2018
              </td>
            </tr>
            <tr
              className=""
            >
              <td
                className=""
                scope={null}
              >
                new@example.com
              </td>
              <td
                className=""
                scope={null}
              >
                Redux with ReactJS
              </td>
              <td
                className=""
                scope={null}
              >
                $200
              </td>
              <td
                className=""
                scope={null}
              >
                October 22, 2017
              </td>
              <td
                className=""
                scope={null}
              >
                May 13, 2018
              </td>
              <td
                className=""
                scope={null}
              >
                80%
              </td>
              <td
                className=""
                scope={null}
              >
                September 25, 2018
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <div
    className="row mt-2"
  >
    <div
      className="col d-flex justify-content-center"
    >
      <nav
        aria-label="inactive-week-pagination"
      >
        <div
          aria-atomic={true}
          aria-live="polite"
          aria-relevant="text"
          className="sr-only"
        >
          Page 1, Current Page, of 1
        </div>
        <ul
          className="pagination"
        >
          <li
            className="page-item disabled"
          >
            <button
              aria-label="Previous"
              className="btn previous page-link"
              disabled={true}
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              tabIndex="-1"
              type="button"
            >
              <div>
                <span
                  aria-hidden={true}
                  className="fa fa-chevron-left mr-2"
                  id="pagination-5"
                />
                Previous
              </div>
            </button>
          </li>
          <li
            className="page-item disabled"
          >
            <button
              aria-label="Next"
              className="btn next page-link"
              disabled={true}
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              tabIndex="-1"
              type="button"
            >
              <div>
                Next
                <span
                  aria-hidden={true}
                  className="fa fa-chevron-right ml-2"
                  id="pagination-6"
                />
              </div>
            </button>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</div>
`;
